# ATMN-351-capstone-w2026-g6-lidar-mapping

./: CMakeLists.txt  DirectionButton.qml  Main.qml  MainBackendHelper.cpp  MainBackendHelper.h  main.cpp  package.xml
include/: MainBackendHelper.h  MainBackendHelper.hpp  PLCTag.hpp  libplctag.h
src/: MainBackendHelper.cpp  PLCTag.cpp  main.cpp
ui/: Main.qml  PilotLight.qml
